# wmux

./: CHANGELOG.md  FASE_3_4_SUMMARY.md  INSTALL.md  PHASE_1_2_SUMMARY.md  PLUGIN_GUIDE.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.tsx  globals.css
src-tauri/: Cargo.toml  apps.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  pty.rs  registry.rs
src/components/panes/: BrowserPane.tsx  EditorPane.tsx  PaneContainer.tsx  TerminalPane.tsx
src/components/ui/: AppLauncher.tsx  ErrorBoundary.tsx  PaneTooSmall.tsx  PaneToolbar.tsx  SettingsPanel.tsx  SplashScreen.tsx  TabBadge.tsx  TabBar.tsx  Titlebar.tsx  ToastManager.tsx
src/hooks/: useAppRegistry.ts  useKeyboardShortcuts.ts  usePty.ts
src/lib/: pluginRegistry.ts  tauri-bridge.ts
src/plugins/: ImageViewerPane.tsx  MarkdownPreviewPane.tsx
src/store/: notificationStore.ts  paneStore.ts
src/types/: index.ts
