[package]
name = "tiled-workspace"
version = "0.1.0"
description = "Tiled Workspace — split pane desktop app"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[lib]
name = "tiled_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tiled-workspace"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
anyhow = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
